personas interesadas responsive y checkboxes usables

--- a/src/pages/crear-personas-interesadas.astro
+++ b/src/pages/crear-personas-interesadas.astro
@@ -4,9 +4,7 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="Añadir Persona Interesada">
   <div class="container mx-auto mt-8 px-4">
-    <h1
-      class="text-3xl font-extrabold text-gray-800 dark:text-white mb-6 text-center"
-    >
+    <h1 class="text-2xl text-gray-800 dark:text-white mb-6 text-center">
       Añadir Persona Interesada
     </h1>
 
