--- a/src/pages/crear-personas-interesadas.astro
+++ b/src/pages/crear-personas-interesadas.astro
@@ -4,20 +4,17 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="Añadir Persona Interesada">
   <div class="container mx-auto mt-8 px-4">
-    <h1 class="text-2xl text-gray-800 dark:text-white mb-6 text-center">
+    <h1 class="text-2xl text-gray-800 mb-6 text-center">
       Añadir Persona Interesada
     </h1>
 
     <!-- Formulario -->
     <form
       id="addPersonForm"
-      class="bg-white dark:bg-gray-800 shadow-md rounded px-8 pt-6 pb-8 mb-4"
+      class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4"
     >
       <div class="mb-4">
-        <label
-          class="block text-gray-700 dark:text-gray-300 text-sm font-bold mb-2"
-          for="nombre"
-        >
+        <label class="block text-gray-700 text-sm font-bold mb-2" for="nombre">
           Nombre
         </label>
         <input
@@ -30,7 +27,7 @@ import Layout from "../layouts/Layout.astro";
       </div>
       <div class="mb-4">
         <label
-          class="block text-gray-700 dark:text-gray-300 text-sm font-bold mb-2"
+          class="block text-gray-700 text-sm font-bold mb-2"
           for="telefono"
         >
           Teléfono
@@ -45,7 +42,7 @@ import Layout from "../layouts/Layout.astro";
       </div>
       <div class="mb-4">
         <label
-          class="block text-gray-700 dark:text-gray-300 text-sm font-bold mb-2"
+          class="block text-gray-700 text-sm font-bold mb-2"
           for="abordado_por"
         >
           Abordado Por
@@ -62,7 +59,7 @@ import Layout from "../layouts/Layout.astro";
       <!-- Campo para seleccionar congregación -->
       <div class="mb-4">
         <label
-          class="block text-gray-700 dark:text-gray-300 text-sm font-bold mb-2"
+          class="block text-gray-700 text-sm font-bold mb-2"
           for="congregacion"
         >
           Congregación que debe atender
@@ -91,7 +88,7 @@ import Layout from "../layouts/Layout.astro";
       <!-- Campo de comentarios -->
       <div class="mb-4">
         <label
-          class="block text-gray-700 dark:text-gray-300 text-sm font-bold mb-2"
+          class="block text-gray-700 text-sm font-bold mb-2"
           for="comentarios"
         >
           Comentarios
