comprobacion de privilegios ajustes de vista de capitan en personas interesadas

--- a/src/pages/crear-personas-interesadas.astro
+++ b/src/pages/crear-personas-interesadas.astro
@@ -158,7 +158,7 @@ import Layout from "../layouts/Layout.astro";
           form.reset(); // Limpiar el formulario
         } else {
           console.error("Error al añadir la persona.");
-          alert("Ocurrió un error al añadir la persona.");
+          alert("Ocurrió un error al añadir la persona. Sin permiso");
         }
       });
     });
