--- a/src/pages/data.astro
+++ b/src/pages/data.astro
@@ -1,10 +1,14 @@
 ---
 import { DataView } from "@/components/index";
 import Layout from "../layouts/Layout.astro";
+import { getSession } from 'auth-astro/server';
+
+const session = await getSession(Astro.request);
+const { isAdmin } = Astro.locals;
 ---
 
 <Layout title="Lista de usuarios | PPAM Malabo">
     <section class="max-w-7xl mx-auto mt-10">
-        <DataView client:only />
+        <DataView client:only isAdmin={isAdmin} />
     </section>
 </Layout>
